--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prod": "npm run build && node app.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.18.1",
     "errorhandler": "^1.5.0",
     "express-session": "^1.15.5",
@@ -38,6 +39,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
+    "ejs-loader": "^0.3.0",
     "element-theme": "^0.2.0",
     "element-theme-default": "^1.0.2",
     "element-ui": "^1.0.2",
